fix spacing, etc

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -397,9 +397,7 @@ hr {
   padding: 10px;
 }
 
-.slide {
-  margin-left: 20px;
-}
+
 
 .beach .frosty {
   background: rgba(0, 0, 0, 0.36)
